--- a/src/pages/GreetingPage/greetingPage.scss
+++ b/src/pages/GreetingPage/greetingPage.scss
@@ -6,26 +6,23 @@
   justify-self: center;
   width: 60%;
   height: 100vh;
-}
 
-h1 {
-  margin-bottom: 1rem;
-  font-size: 1.5rem;
-  font-weight: 700;
-}
+  h1 {
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
 
-.button {
-  padding: 0.5rem 1rem;
-  margin-top: 1rem;
-  font-size: 1rem;
-  font-weight: 700;
-  color: white;
-  cursor: pointer;
-  background-color: #4446d8;
-  border: none;
-  border-radius: 0.25rem;
+  p {
+    font-size: 1.2rem;
+  }
 
-  &:hover {
-    background-color: #2b2ece;
+  strong {
+    font-size: 1.2rem;
+  }
+
+  button {
+    font-size: 1.2rem;
   }
 }
+
