--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,32 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  line-height: 1.5;
-  color: black;
-  color-scheme: light dark;
-  background-color: white;
-  font-synthesis: none;
-  text-rendering: optimizelegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html, body {
+html, body, #root {
   width: 100%;
   height: 100%;
-  overflow: hidden;
-}
-
-button {
-  width: 60%;
+  padding: 0;
+  margin: 0;
 }
 
