--- a/src/pages/ProfilePage/profilePage.scss
+++ b/src/pages/ProfilePage/profilePage.scss
@@ -19,12 +19,12 @@
 
     .form-group {
       display: flex;
+      align-items: center;
       justify-content: space-between;
 
       .form-control {
         width: 60%;
         padding: 0.5rem;
-
         border-radius: 5px;
         border: none;
         margin-bottom: 1rem;
