--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,9 +3,23 @@
 @tailwind utilities;
 
 html, body, #root {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  min-height: 100dvh;
   padding: 0;
   margin: 0;
+}
+
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-primary {
+  @apply  md:w-1/2 mt-6 text-xl py-8 px-6 text-white rounded-full shadow-md hover:shadow-xl transition duration-300;
+}
+
+.h1-primary {
+  @apply mb-5 text-3xl font-extrabold text-center text-blue-600 sm:text-3xl;
 }
 
