--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html, body, #root {
-  width: 100vw;
+  width: 100dvw;
   min-height: 100dvh;
   padding: 0;
   margin: 0;
@@ -16,10 +16,13 @@ html, body, #root {
 }
 
 .btn-primary {
-  @apply  md:w-1/2 mt-6 text-xl py-8 px-6 text-white rounded-full shadow-md hover:shadow-xl transition duration-300;
+  @apply   mt-6 text-xl py-8 px-6 text-white rounded-full shadow-md hover:shadow-xl transition duration-300;
 }
 
 .h1-primary {
   @apply mb-5 text-3xl font-extrabold text-center text-blue-600 sm:text-3xl;
 }
 
+.container-primary {
+  @apply container flex flex-col items-center justify-center p-6 w-full max-w-full min-h-screen  sm:my-auto;
+}
