--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,9 +20,9 @@ html, body, #root {
 }
 
 .h1-primary {
-  @apply mb-5 text-3xl font-extrabold text-center text-blue-600 sm:text-3xl;
+  @apply mb-5 text-2xl font-extrabold text-center text-blue-600 sm:text-3xl;
 }
 
 .container-primary {
-  @apply container flex flex-col items-center justify-center p-6 w-full max-w-full min-h-screen  sm:my-auto;
+  @apply container flex flex-col items-center justify-center p-6 w-full max-w-full min-h-screen sm:mx-32 sm:my-auto;
 }
