--- a/src/pages/ProfilePage/profilePage.scss
+++ b/src/pages/ProfilePage/profilePage.scss
@@ -1,5 +1,3 @@
-
-
-  input:-webkit-autofill {
-    -webkit-text-fill-color: black !important;
-  }
+.form-label {
+  @apply block text-sm sm:text-base font-medium text-gray-700 mb-2;
+}
