--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@ html, body, #root {
   min-height: 100dvh;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 #root {
@@ -25,4 +26,32 @@ html, body, #root {
 
 .container-primary {
   @apply container flex flex-col items-center justify-center p-6 w-full max-w-full min-h-screen sm:mx-32 sm:my-auto;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  -webkit-text-fill-color: black !important;
+  background-color: transparent !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+.form-input {
+  &__wrapper {
+    border: 1px solid #d1d5db;
+    transition: all 0.2s ease;
+  }
+
+  &__field {
+    font-size: 1.125rem;
+    width: 100%;
+
+    &::placeholder {
+      color: #9ca3af;
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
 }
