--- a/src/pages/ProfilePage/profilePage.scss
+++ b/src/pages/ProfilePage/profilePage.scss
@@ -1,3 +1,4 @@
 .form-label {
-  @apply block text-sm sm:text-base font-medium text-gray-700 mb-2;
+  @apply block text-base sm:text-lg font-medium text-gray-700 mb-2;
 }
+
